# ccli

./: .gitignore  CMakeLists.txt  README.md  build.bat  build.sh  first_run_MSVC.bat  first_run_clang.bat  first_run_linux.sh  ops.txt  testDebug.bat
Docs/: BNF.txt
include/: Lexer.h  Parser.h  debug_malloc.h
src/: Lexer.c  Lexer.inc  Parser.c  debug_malloc.c  main.c
tests/: README.md  func_list.h  test_lexer.c  test_parser.c  test_test.c  unity.h
